--- a/test/views/editor.ejs
+++ b/test/views/editor.ejs
@@ -26,7 +26,30 @@
           </ul>
       </div>
   </div>
-  <div id="editor" style="height: 600px"></div>
+  <div id="editor" style="height: 600px">
+\documentclass{jsarticle}
+%\usepackage[dvips]{graphicx}
+\usepackage[dvipdfmx]{graphicx}
+\setlength{\textheight}{24cm}
+\setlength{\topmargin}{-1.5cm}
+\setlength{\textwidth}{17cm}
+\setlength{\oddsidemargin}{-.5cm}
+\usepackage{here}
+
+\title{タイトル}
+\author{名前} % 氏名（学番号）
+date{○年○月○日（○）} % 提出期限
+            
+\begin{document}
+\maketitle
+            
+\tableofcontents
+\newpage
+            
+\section{はじめに}
+      
+\end{document}
+  </div>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js"></script>
