--- a/test/views/editor.ejs
+++ b/test/views/editor.ejs
@@ -74,7 +74,7 @@
         '\\tableofcontents\n' +
         '\\newpage\n' +
         '\n' +
-        '\section{はじめに}\n' +
+        '\\section{はじめに}\n' +
         '\n' +
         '\\end{document}\n'
       );
